fixed padding top to prevent the navbar covers the section header text

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -108,6 +108,7 @@ section {
   flex: 1;
   padding: 20px;
   box-sizing: border-box;
+  padding-top: 4rem;
 }
 
 /* About us section */
